// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Settings /> can navigate Autoplay Settings 1`] = `
<div>
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-describedby="generated-id"
        aria-live="assertive"
        aria-modal="true"
        class="euiPanel euiPopover__panel euiPopover__panel--top euiPopover__panel-withTitle"
        role="dialog"
        style="top: -16px; left: -22px; z-index: 2000;"
      >
        <div
          class="euiPopover__panelArrow euiPopover__panelArrow--top"
          style="left: 10px; top: 0px;"
        />
        <div>
          <div
            class="euiContextMenu"
            style="height: 0px;"
          >
            <div
              class="euiContextMenuPanel euiContextMenu__panel"
              tabindex="0"
            >
              <div
                class="euiPopoverTitle"
              >
                <span
                  class="euiContextMenu__itemLayout"
                >
                  Settings
                </span>
              </div>
              <div>
                <div>
                  <button
                    class="euiContextMenuItem"
                    type="button"
                  >
                    <span
                      class="euiContextMenu__itemLayout"
                    >
                      <div
                        class="euiContextMenu__icon"
                        data-euiicon-type="play"
                      />
                      <span
                        class="euiContextMenuItem__text"
                      >
                        Auto Play
                      </span>
                      <div
                        class="euiContextMenu__arrow"
                        data-euiicon-type="arrowRight"
                      />
                    </span>
                  </button>
                  <button
                    class="euiContextMenuItem"
                    type="button"
                  >
                    <span
                      class="euiContextMenu__itemLayout"
                    >
                      <div
                        class="euiContextMenu__icon"
                        data-euiicon-type="boxesHorizontal"
                      />
                      <span
                        class="euiContextMenuItem__text"
                      >
                        Toolbar
                      </span>
                      <div
                        class="euiContextMenu__arrow"
                        data-euiicon-type="arrowRight"
                      />
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`<Settings /> can navigate Autoplay Settings 2`] = `
<div>
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-describedby="generated-id"
        aria-live="assertive"
        aria-modal="true"
        class="euiPanel euiPopover__panel euiPopover__panel--top euiPopover__panel-isOpen euiPopover__panel-withTitle"
        role="dialog"
        style="top: -16px; left: -22px; z-index: 2000;"
      >
        <div
          class="euiPopover__panelArrow euiPopover__panelArrow--top"
          style="left: 10px; top: 0px;"
        />
        <div>
          <div
            class="euiContextMenu"
            style="height: 0px;"
          >
            <div
              class="euiContextMenuPanel euiContextMenu__panel euiContextMenuPanel-txOutLeft"
              tabindex="0"
            >
              <div
                class="euiPopoverTitle"
              >
                <span
                  class="euiContextMenu__itemLayout"
                >
                  Settings
                </span>
              </div>
              <div>
                <div>
                  <button
                    class="euiContextMenuItem"
                    type="button"
                  >
                    <span
                      class="euiContextMenu__itemLayout"
                    >
                      <div
                        class="euiContextMenu__icon"
                        data-euiicon-type="play"
                      />
                      <span
                        class="euiContextMenuItem__text"
                      >
                        Auto Play
                      </span>
                      <div
                        class="euiContextMenu__arrow"
                        data-euiicon-type="arrowRight"
                      />
                    </span>
                  </button>
                  <button
                    class="euiContextMenuItem"
                    type="button"
                  >
                    <span
                      class="euiContextMenu__itemLayout"
                    >
                      <div
                        class="euiContextMenu__icon"
                        data-euiicon-type="boxesHorizontal"
                      />
                      <span
                        class="euiContextMenuItem__text"
                      >
                        Toolbar
                      </span>
                      <div
                        class="euiContextMenu__arrow"
                        data-euiicon-type="arrowRight"
                      />
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="euiContextMenuPanel euiContextMenu__panel euiContextMenuPanel-txInLeft"
              tabindex="0"
            >
              <button
                class="euiContextMenuPanelTitle"
                data-test-subj="contextMenuPanelTitleButton"
                type="button"
              >
                <span
                  class="euiContextMenu__itemLayout"
                >
                  <div
                    class="euiContextMenu__icon"
                    data-euiicon-type="arrowLeft"
                  />
                  <span
                    class="euiContextMenu__text"
                  >
                    Auto Play
                  </span>
                </span>
              </button>
              <div>
                <div>
                  <div
                    style="padding: 16px;"
                  >
                    <div
                      class="euiSwitch"
                    >
                      <button
                        aria-checked="false"
                        aria-labelledby="generated-id"
                        class="euiSwitch__button"
                        id="cycle"
                        name="cycle"
                        role="switch"
                        type="button"
                      >
                        <span
                          class="euiSwitch__body"
                        >
                          <span
                            class="euiSwitch__thumb"
                          />
                          <span
                            class="euiSwitch__track"
                          >
                            <div
                              class="euiSwitch__icon"
                              data-euiicon-type="cross"
                            />
                            <div
                              class="euiSwitch__icon euiSwitch__icon--checked"
                              data-euiicon-type="check"
                            />
                          </span>
                        </span>
                      </button>
                      <span
                        class="euiSwitch__label"
                        id="generated-id"
                      >
                        Cycle Slides
                      </span>
                    </div>
                    <hr
                      class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginMedium"
                    />
                    <form>
                      <div
                        class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiFlexGroup--responsive"
                      >
                        <div
                          class="euiFlexItem"
                        >
                          <div
                            class="euiFormRow euiFormRow--compressed"
                            id="generated-id-row"
                          >
                            <div
                              class="euiFormRow__labelWrapper"
                            >
                              <label
                                class="euiFormLabel euiFormRow__label"
                                for="generated-id"
                              >
                                Set a custom interval
                              </label>
                            </div>
                            <div
                              class="euiFormRow__fieldWrapper"
                            >
                              <div
                                class="euiFormControlLayout euiFormControlLayout--compressed"
                              >
                                <div
                                  class="euiFormControlLayout__childrenWrapper"
                                >
                                  <input
                                    aria-describedby="generated-id-help"
                                    class="euiFieldText euiFieldText--compressed"
                                    id="generated-id"
                                    type="text"
                                    value="5s"
                                  />
                                </div>
                              </div>
                              <div
                                class="euiFormHelpText euiFormRow__text"
                                id="generated-id-help"
                              >
                                Use shorthand notation, like 30s, 10m, or 1h
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="euiFlexItem euiFlexItem--flexGrowZero"
                        >
                          <div
                            class="euiFormRow euiFormRow--hasEmptyLabelSpace euiFormRow--compressed"
                            id="generated-id-row"
                          >
                            <div
                              class="euiFormRow__fieldWrapper"
                            >
                              <button
                                class="euiButton euiButton--primary euiButton--small"
                                id="generated-id"
                                style="min-width: auto;"
                                type="submit"
                              >
                                <span
                                  class="euiButton__content"
                                >
                                  <span
                                    class="euiButton__text"
                                  >
                                    Set
                                  </span>
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </form>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`<Settings /> can navigate Toolbar Settings, closes when activated 1`] = `
<div>
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-describedby="generated-id"
        aria-live="assertive"
        aria-modal="true"
        class="euiPanel euiPopover__panel euiPopover__panel--top euiPopover__panel-withTitle"
        role="dialog"
        style="top: -16px; left: -22px; z-index: 2000;"
      >
        <div
          class="euiPopover__panelArrow euiPopover__panelArrow--top"
          style="left: 10px; top: 0px;"
        />
        <div>
          <div
            class="euiContextMenu"
            style="height: 0px;"
          >
            <div
              class="euiContextMenuPanel euiContextMenu__panel"
              tabindex="0"
            >
              <div
                class="euiPopoverTitle"
              >
                <span
                  class="euiContextMenu__itemLayout"
                >
                  Settings
                </span>
              </div>
              <div>
                <div>
                  <button
                    class="euiContextMenuItem"
                    type="button"
                  >
                    <span
                      class="euiContextMenu__itemLayout"
                    >
                      <div
                        class="euiContextMenu__icon"
                        data-euiicon-type="play"
                      />
                      <span
                        class="euiContextMenuItem__text"
                      >
                        Auto Play
                      </span>
                      <div
                        class="euiContextMenu__arrow"
                        data-euiicon-type="arrowRight"
                      />
                    </span>
                  </button>
                  <button
                    class="euiContextMenuItem"
                    type="button"
                  >
                    <span
                      class="euiContextMenu__itemLayout"
                    >
                      <div
                        class="euiContextMenu__icon"
                        data-euiicon-type="boxesHorizontal"
                      />
                      <span
                        class="euiContextMenuItem__text"
                      >
                        Toolbar
                      </span>
                      <div
                        class="euiContextMenu__arrow"
                        data-euiicon-type="arrowRight"
                      />
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`<Settings /> can navigate Toolbar Settings, closes when activated 2`] = `
<div>
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-describedby="generated-id"
        aria-live="assertive"
        aria-modal="true"
        class="euiPanel euiPopover__panel euiPopover__panel--top euiPopover__panel-isOpen euiPopover__panel-withTitle"
        role="dialog"
        style="top: -16px; left: -22px; z-index: 2000;"
      >
        <div
          class="euiPopover__panelArrow euiPopover__panelArrow--top"
          style="left: 10px; top: 0px;"
        />
        <div>
          <div
            class="euiContextMenu"
            style="height: 0px;"
          >
            <div
              class="euiContextMenuPanel euiContextMenu__panel euiContextMenuPanel-txOutLeft"
              tabindex="0"
            >
              <div
                class="euiPopoverTitle"
              >
                <span
                  class="euiContextMenu__itemLayout"
                >
                  Settings
                </span>
              </div>
              <div>
                <div>
                  <button
                    class="euiContextMenuItem"
                    type="button"
                  >
                    <span
                      class="euiContextMenu__itemLayout"
                    >
                      <div
                        class="euiContextMenu__icon"
                        data-euiicon-type="play"
                      />
                      <span
                        class="euiContextMenuItem__text"
                      >
                        Auto Play
                      </span>
                      <div
                        class="euiContextMenu__arrow"
                        data-euiicon-type="arrowRight"
                      />
                    </span>
                  </button>
                  <button
                    class="euiContextMenuItem"
                    type="button"
                  >
                    <span
                      class="euiContextMenu__itemLayout"
                    >
                      <div
                        class="euiContextMenu__icon"
                        data-euiicon-type="boxesHorizontal"
                      />
                      <span
                        class="euiContextMenuItem__text"
                      >
                        Toolbar
                      </span>
                      <div
                        class="euiContextMenu__arrow"
                        data-euiicon-type="arrowRight"
                      />
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="euiContextMenuPanel euiContextMenu__panel euiContextMenuPanel-txInLeft"
              tabindex="0"
            >
              <button
                class="euiContextMenuPanelTitle"
                data-test-subj="contextMenuPanelTitleButton"
                type="button"
              >
                <span
                  class="euiContextMenu__itemLayout"
                >
                  <div
                    class="euiContextMenu__icon"
                    data-euiicon-type="arrowLeft"
                  />
                  <span
                    class="euiContextMenu__text"
                  >
                    Toolbar
                  </span>
                </span>
              </button>
              <div>
                <div>
                  <div
                    style="padding: 16px;"
                  >
                    <div
                      class="euiFormRow"
                      id="generated-id-row"
                    >
                      <div
                        class="euiFormRow__fieldWrapper"
                      >
                        <div
                          class="euiSwitch"
                        >
                          <button
                            aria-checked="false"
                            aria-describedby="generated-id-help"
                            aria-labelledby="generated-id"
                            class="euiSwitch__button"
                            data-test-subj="hideToolbarSwitch"
                            id="generated-id"
                            name="toolbarHide"
                            role="switch"
                            type="button"
                          >
                            <span
                              class="euiSwitch__body"
                            >
                              <span
                                class="euiSwitch__thumb"
                              />
                              <span
                                class="euiSwitch__track"
                              >
                                <div
                                  class="euiSwitch__icon"
                                  data-euiicon-type="cross"
                                />
                                <div
                                  class="euiSwitch__icon euiSwitch__icon--checked"
                                  data-euiicon-type="check"
                                />
                              </span>
                            </span>
                          </button>
                          <span
                            class="euiSwitch__label"
                            id="generated-id"
                          >
                            Hide Toolbar
                          </span>
                        </div>
                        <div
                          class="euiFormHelpText euiFormRow__text"
                          id="generated-id-help"
                        >
                          Hide the toolbar when the mouse is not within the Canvas?
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`<Settings /> can navigate Toolbar Settings, closes when activated 3`] = `"<div><div><div data-focus-guard=\\"true\\" tabindex=\\"-1\\" style=\\"width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;\\"></div><div data-focus-guard=\\"true\\" tabindex=\\"-1\\" style=\\"width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;\\"></div><div data-focus-lock-disabled=\\"disabled\\"><div class=\\"euiPanel euiPopover__panel euiPopover__panel--top euiPopover__panel-withTitle\\" aria-live=\\"assertive\\" role=\\"dialog\\" aria-modal=\\"true\\" aria-describedby=\\"generated-id\\" style=\\"top: -16px; left: -22px; z-index: 2000;\\"><div class=\\"euiPopover__panelArrow euiPopover__panelArrow--top\\" style=\\"left: 10px; top: 0px;\\"></div><div><div class=\\"euiContextMenu\\" style=\\"height: 0px;\\"><div class=\\"euiContextMenuPanel euiContextMenu__panel euiContextMenuPanel-txOutLeft\\" tabindex=\\"0\\"><div class=\\"euiPopoverTitle\\"><span class=\\"euiContextMenu__itemLayout\\">Settings</span></div><div><div><button class=\\"euiContextMenuItem\\" type=\\"button\\"><span class=\\"euiContextMenu__itemLayout\\"><div data-euiicon-type=\\"play\\" class=\\"euiContextMenu__icon\\"></div><span class=\\"euiContextMenuItem__text\\">Auto Play</span><div data-euiicon-type=\\"arrowRight\\" class=\\"euiContextMenu__arrow\\"></div></span></button><button class=\\"euiContextMenuItem\\" type=\\"button\\"><span class=\\"euiContextMenu__itemLayout\\"><div data-euiicon-type=\\"boxesHorizontal\\" class=\\"euiContextMenu__icon\\"></div><span class=\\"euiContextMenuItem__text\\">Toolbar</span><div data-euiicon-type=\\"arrowRight\\" class=\\"euiContextMenu__arrow\\"></div></span></button></div></div></div><div class=\\"euiContextMenuPanel euiContextMenu__panel euiContextMenuPanel-txInLeft\\" tabindex=\\"0\\"><button class=\\"euiContextMenuPanelTitle\\" type=\\"button\\" data-test-subj=\\"contextMenuPanelTitleButton\\"><span class=\\"euiContextMenu__itemLayout\\"><div data-euiicon-type=\\"arrowLeft\\" class=\\"euiContextMenu__icon\\"></div><span class=\\"euiContextMenu__text\\">Toolbar</span></span></button><div><div><div style=\\"padding: 16px;\\"><div class=\\"euiFormRow\\" id=\\"generated-id-row\\"><div class=\\"euiFormRow__fieldWrapper\\"><div class=\\"euiSwitch\\"><button id=\\"generated-id\\" aria-checked=\\"true\\" class=\\"euiSwitch__button\\" role=\\"switch\\" type=\\"button\\" aria-labelledby=\\"generated-id\\" data-test-subj=\\"hideToolbarSwitch\\" name=\\"toolbarHide\\" aria-describedby=\\"generated-id-help\\"><span class=\\"euiSwitch__body\\"><span class=\\"euiSwitch__thumb\\"></span><span class=\\"euiSwitch__track\\"><div data-euiicon-type=\\"cross\\" class=\\"euiSwitch__icon\\"></div><div data-euiicon-type=\\"check\\" class=\\"euiSwitch__icon euiSwitch__icon--checked\\"></div></span></span></button><span class=\\"euiSwitch__label\\" id=\\"generated-id\\">Hide Toolbar</span></div><div class=\\"euiFormHelpText euiFormRow__text\\" id=\\"generated-id-help\\">Hide the toolbar when the mouse is not within the Canvas?</div></div></div></div></div></div></div></div></div></div></div><div data-focus-guard=\\"true\\" tabindex=\\"-1\\" style=\\"width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;\\"></div></div></div>"`;
